# chess-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  types.hpp
board/: CMakeLists.txt  State.cpp  State.hpp  board.cpp  board.hpp  tables.cpp  tables.hpp
evaluation/: CMakeLists.txt  eval.cpp  eval.hpp
generate/: CMakeLists.txt  engine.hpp
move_generation/: CMakeLists.txt  Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp
moving/: engine.hpp
scripts/: README.md  boarding.py  debug.py  filerank.py  flip_arry.py  me  mva.py  stockfish
search/: CMakeLists.txt  Heuristics.hpp  Transposition.cpp  Transposition.hpp  search.cpp  search.hpp
src/: CMakeLists.txt  perft.cpp  perft.hpp  tables.cpp  tables.hpp  uci.cpp  uci.hpp
utils/: CMakeLists.txt  perft.cpp  tables.cpp  tables.hpp
